welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:11: error: ';' expected but 'if' found.
	}if (!vacation && day > 6){
         ^